--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <span class="visible-xs navbar-brand">Contact</span>
+				  <span class="visible-xs navbar-brand Contact"><strong>Contact</strong></span>
+                  
                 </div>
-                <div class="navbar-collapse collapse sidebar-navbar-collapse">
+                <div class="navbar-collapse collapse sidebar-navbar-collapse" style="width:100%;">
                   <ul class="nav navbar-nav">
                     <li><strong>Address</strong>: Beirut-Lebanon</li>
                     <li><strong>Email</strong>:zeinabbaalbaky@gmail.com</li>
